# goodjob

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
goodjob/: __main__.py
